informes and experiencia functions created
