# app/Models/Alumne.php
@@ -4,6 +4,8 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use App\Models\Usuaris;
+use App\Models\Informe;
+use App\Models\Experiencia;
 
 class Alumne extends Usuaris
 {
@@ -12,4 +14,13 @@ class Alumne extends Usuaris
         "Curs",
         "Experiencia",
     ];
+
+    public function informes() {
+        return $this->hasMany(Informe::class, "alumne_id");
+    }
+
+    public function experiencia()
+    {
+        return $this->hasOne(Experiencia::class, 'id', 'experiencia_id');
+    }
 }
