# app/Models/SwaggerModelsAlumne.php
@@ -28,4 +28,7 @@ class SwaggerModelsAlumne
 
     #[OA\Property(type: "integer", format: "int32", description: "Experiència de l'alumne")]
     public string $Experiencia;
+
+    #[OA\Property(type: "string", description: "Imatge de perfil", example: "images/avatar.jpg")]
+    public string $ProfilePicturePath;
 }
